Cleaned up a overflow layout bug for project_index.html.

--- a/gui/css/style-project.css
+++ b/gui/css/style-project.css
@@ -87,10 +87,10 @@
 	font-weight: bold;
 }
 .projectList_project_owner {
-	width: 125px;
+	width: 110px;
 }
 .projectList_project_status {
-	width: 85px;
+	width: 60px;
 }
 .projectList_project_budget {
 	width: 95px;
